test/tests/bad/undef-ctor.carth
;; UndefCtor

(defvar undef-ctor ThisCtorIsUndefined)
